fix(api): preserve create-post tag validation behavior